fix contrast of message assistant  bg

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -3,7 +3,7 @@
   --primary-color: #0D6EFD;
   --primary-overlay: rgba(0, 123, 255, 0.5);
   --primary-darker: #0a58ca;
-  --background-color: #f4f4f4;
+  --background-color: #e2e6e9;
   --user-message-bg: #cce5ff;
   --assistant-message-bg: white;
   --box-shadow: 4px 4px 8px var(--primary-color);
